--- a/index2.html
+++ b/index2.html
@@ -207,7 +207,7 @@
             </div>
             <div class="form-group">
                 <label for="dataContent">资料说明（关键信息/用途）</label>
-                <textarea id="dataContent" placeholder="输入资料的关键信息、对PBL的用途等"></textarea>
+                <textarea id="dataContent" placeholder="输入资料的关键信息"></textarea>
             </div>
             <button class="submit-btn" onclick="addData()">+ 提交新增资料</button>
         </div>
